# Arham2005-GIAIC-Hackathon-2-Phase-5-Deployment-of-To-Do-App-

./: .dockerignore  .gitignore  CLAUDE.md  FIXED_SOLUTION.md  HOW_TO_RUN_UNIFIED_APP.txt  PHASE3_UPGRADE_SUMMARY.md  UNIFIED_APP_README.md  comprehensive_test.py  create_user.py  create_user_raw.py  enhanced_chat_service.py  final_auth_test.py  final_test.py  final_test_simple.py  main.py  minimal_backend.py  phase3_backend_final.py  phase3_clean_backend.py  phase3_plan.md  pyproject.toml  requirements.txt  run_backend.py  run_phase5_backend.py  simple_chat_service.py  start_unified_app.py  task_model_fixed.py  temp_backend_test.py  temp_main.py  test_chatbot_functionality.py  test_commands.py  test_intent.py  test_login.py  test_tags_fix.py  unified_backend.py  unified_backend_chat_fixed.py  unified_backend_fixed.py  unified_backend_improved.py  verify_chatbot.py  working_chatbot_fix.py
.claude/: settings.local.json
phase2/: README.md
phase2/frontend/: middleware.ts  next.config.js  package-lock.json  package.json
phase3/: README.md
phase3/backend/: Dockerfile  (+1 more)
phase4/: DEPLOYMENT_INSTRUCTIONS.md  Dockerfile.phase4  ai-ops-guide.md  backend.Dockerfile  deploy-script.ps1  deploy-script.sh  docker-compose.yml  frontend.Dockerfile  full-deployment-script.bat  implementation_plan.md  quick-deploy.bat  setup-docker.sh  summary.md  testing-validation.md
phase5/: FINAL_SUMMARY.md  README.md  implementation_plan_part_a.md
routes/: auth_routes.py  task_routes.py
schemas/: task.py  user.py
services/: auth_service.py  task_service.py
utils/: __init__.py
(+143 files in other folders)
